--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
 title: ese.JiHea.Lim
-subtitle: 个人站
+subtitle: EMBEDDED SYSTEMS ENGINEERING
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
