--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
 title: ese.JiHea.Lim
 subtitle: EMBEDDED SYSTEMS ENGINEERING
-description: 欢迎来到我的个人站~
+description: I will slove every single questin!
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc: 임지혜 / 임베디드시스템공학과 학부생
 url: "https://eseJiHeaLim.github.io"
 
 # Comment
