--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: ese.JiHea.Lim
 subtitle: EMBEDDED SYSTEMS ENGINEERING
-description: I will slove every single questin!
+description: Every single question!
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
