--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ title: ese.JiHea.Lim
 subtitle: EMBEDDED SYSTEMS ENGINEERING
 description: Every single question!
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: LJH
 # 头像里面的描述
 avatarDesc: 임지혜 / 임베디드시스템공학과 학부생
 url: "https://eseJiHeaLim.github.io"
 
 # Comment
 comment:
-    disqus: leopard
+    disqus: LJH
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
